add some user configurations
